# near-ai-agent-studio

./: .env.example  .gitignore  =0.1.0  =1.12.0  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_transaction.py
.github/workflows/: ci.yml
agents/: decision-maker.yaml  market_analyzer.json  price-monitor.yaml  risk_manager.json  strategy_optimizer.json
arbitrage/: config.json  strategy_template.py
docs/: api-reference.md  core-concepts.md  first-strategy.md  troubleshooting.md  tutorial.md  workshop-guide.md
near_swarm/: __init__.py
near_swarm/agents/: __init__.py
near_swarm/agents/decision-maker/: __init__.py  agent.yaml  plugin.py
near_swarm/agents/market_analyzer/: agent.yaml  plugin.py
near_swarm/agents/price-monitor/: __init__.py  agent.yaml  plugin.py
near_swarm/agents/risk_manager/: agent.yaml  plugin.py
near_swarm/cli/: __init__.py  __main__.py  chat.py  config.py  create.py  deploy.py  main.py  plugins.py  test.py
near_swarm/config/: loader.py  schema.py
near_swarm/core/: __init__.py  agent.py  cli.py  config.py  consensus.py  exceptions.py  llm_provider.py  market_data.py  memory_manager.py  near_integration.py  strategy.py  swarm_agent.py  web_search.py
near_swarm/core/config/: agent_roles.json  swarm_config.json
near_swarm/core/templates/: strategy_template.py
near_swarm/examples/: __init__.py  arbitrage.py  arbitrage_strategy.py  demo.py  market_making.py  near_education_agent.py  portfolio_agent.py  simple_strategy.py  swarm_trading.py  token_transfer_strategy.py
near_swarm/plugins/: __init__.py  base.py  loader.py
near_swarm/plugins/examples/: market_analyzer.py
near_swarm/strategies/: simple_strategy.py
near_swarm/templates/: near_portfolio_advisor.py  strategy_template.py
near_swarm/templates/plugin_template/: README.md  agent.yaml  plugin.py
plugins/arbitrage-agent/: agent.yaml  plugin.py
plugins/decision-maker/: plugin.py
plugins/price-monitor/: plugin.py
plugins/token-transfer/: agent.yaml  plugin.py
scripts/: chat  create_near_wallet.sh  near-swarm  quickstart.sh  run_example.py  test_cli.py  verify.sh  verify_workshop.py
templates/: defi-bot.yaml
test_strategy/: config.json  test_strategy.py
tests/: test_agent.py  test_arbitrage.py  test_consensus.py  test_memory.py  test_near_integration.py  test_swarm_agent.py
tests/core/: test_agent.py  test_llm_provider.py  test_market.py  test_near_integration.py  test_swarm_agent.py
tests/examples/: test_market_data.py
tests/integration/: test_cli_commands.py  test_swarm_integration.py
