[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "near-swarm"
version = "0.1.0"
description = "NEAR Protocol Swarm Intelligence Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jarrod Barnes", email = "jbarnes@near.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aioredis>=2.0.0",
    "base58>=2.1.0",
    "beautifulsoup4>=4.12.3",
    "ccxt>=4.0.0",
    "click>=8.0.0",
    "colorlog>=6.9.0",
    "elevenlabs>=1.50.3",
    "gitpython>=3.1.40",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "near-api>=0.1.0",
    "openai>=1.0.0",
    "prometheus-client>=0.20.0",
    "prompt_toolkit>=3.0.48",
    "pydantic>=2.0.0",
    "pynacl>=1.5.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "python-dotenv>=0.19.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "structlog>=21.1.0",
    "typer>=0.9.0"
]

[project.scripts]
near-swarm = "near_swarm.cli:app"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
]

[tool.setuptools]
packages = ["near_swarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=near_swarm"

[tool.pyright]
include = ["near_swarm/**"]
exclude = ["**/node_modules", "**/__pycache__"]
reportMissingImports = true
pythonVersion = "3.12"

[tool.pylance]
reportMissingImports = "warning" 